--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -28,14 +29,15 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  gap: 200px !important;
 }
 
 header {
-  position: absolute;
+  position: sticky;
   width: 100%;
-  top: 10%;
+  top: 5%;
+  z-index: 1;
 }
 
 .header-container {
@@ -43,7 +45,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: rgba(248, 248, 248, 0.007);
+  background: rgba(248, 248, 248, 0);
   box-shadow: 0 4px 30px rgba(163, 163, 163, 0.1);
   backdrop-filter: blur(7.4px);
   -webkit-backdrop-filter: blur(7.4px);
@@ -65,8 +67,18 @@ header {
 .title-logo a {
   color: var(--primary-color);
   font-family: "Aboreto", cursive;
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-decoration: none;
+  animation: text-shadow-drop 1s linear 0s 1 normal forwards;
+}
+
+@keyframes text-shadow-drop {
+  0% {
+    text-shadow: 0 0 0 transparent;
+  }
+  100% {
+    text-shadow: -6px 6px 18px rgb(162, 0, 255);
+  }
 }
 
 .menu-btn {
@@ -108,15 +120,76 @@ header {
   background-color: var(--accent-color);
 }
 
+.nav-container > li > a {
+  text-decoration: none;
+  color: var(--secondary-color);
+}
+
+.nav-container .highlight {
+  text-align: center;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: underline;
+  color: var(--primary-color);
+}
+
+.hero-container {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero-container h1 {
+  font-family: "Aboreto", cursive;
+  font-size: 7rem;
+  color: var(--primary-color);
+  animation: title 3s ease 0s normal none;
+}
+
+@keyframes title {
+  0% {
+    letter-spacing: 3rem;
+    filter: blur(12px);
+    opacity: 0;
+  }
+
+  100% {
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+
+.hero-container p {
+  font-size: 2rem;
+  color: var(--secondary-color);
+  margin-top: 20px;
+  animation: descr 3s linear 0s 1 normal none;
+}
+
+@keyframes descr {
+  0% {
+    letter-spacing: 2rem;
+    transform: translateY(300px);
+    filter: blur(12px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0px);
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+
 .about {
-  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 30%;
-  width: 50%;
-  z-index: 1;
-  padding: 20px;
+  width: 60%;
+  padding: 30px;
   background: rgba(255, 255, 255, 0);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -132,7 +205,7 @@ header {
   color: #ffffff;
 }
 
-.hero {
+.about-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -149,7 +222,7 @@ header {
 }
 
 .about-content p {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   font-weight: 400;
 }
 
@@ -187,13 +260,11 @@ header {
 }
 
 .skill-container {
-  position: absolute;
   width: 100%;
-  top: 80%;
   padding: 30px 0;
   overflow: hidden;
   white-space: nowrap;
-  background: rgb(253, 253, 253);
+  background: rgb(255, 255, 255);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10.1px);
   -webkit-backdrop-filter: blur(10.1px);
@@ -250,7 +321,113 @@ header {
   }
 }
 
+.work-container {
+  width: 100%;
+  padding: 20px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  background-color: #ffffff;
+}
+
+.work-container h1 {
+  font-size: 3rem;
+  padding: 20px;
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 30%;
+  padding: 30px;
+  gap: 20px;
+  border-radius: 10px;
+  background-color: var(--secondary-color);
+}
+
+.card img {
+  width: 100%;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.card h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.card p {
+  font-size: 1.3rem;
+}
+
+.card i {
+  font-size: 2.5rem;
+  color: #000000;
+}
+
+.card i:hover {
+  color: var(--accent-color);
+}
+
+.contact-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff;
+  gap: 30px;
+}
+
+.contact-container h1 {
+  font-size: 2.3rem;
+}
+
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.image-container img {
+  width: 300px;
+  padding: 20px;
+}
+
+.contact-content {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5rem;
+  gap: 10px;
+}
+
+.contact-content i {
+  font-size: 2.5rem;
+  color: #000000;
+  margin: 5px;
+}
+
 @media screen and (max-width: 960px) {
+  header {
+    top: 0;
+    position: fixed;
+  }
+
+  .container {
+    gap: 100px !important;
+  }
+
   .header-container {
     display: flex;
     justify-content: center;
@@ -330,5 +507,106 @@ header {
   .nav-container li:hover {
     width: 100%;
     background-color: #ffffff49;
+  }
+
+  .hero-container h1 {
+    font-size: 2rem;
+    animation: title 3s ease 0s normal none;
+  }
+
+  @keyframes title {
+    0% {
+      letter-spacing: 0.5rem;
+      filter: blur(12px);
+      opacity: 0;
+    }
+
+    100% {
+      filter: blur(0);
+      opacity: 1;
+    }
+  }
+  .hero-container p {
+    font-size: 1rem;
+    animation: descr 3s linear 0s 1 normal none;
+  }
+
+  @keyframes descr {
+    0% {
+      letter-spacing: 0.3rem;
+      transform: translateY(300px);
+      filter: blur(12px);
+      opacity: 0;
+    }
+
+    100% {
+      transform: translateY(0px);
+      filter: blur(0);
+      opacity: 1;
+    }
+  }
+
+  .about {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .about-content h1 {
+    font-size: 2rem;
+  }
+
+  .about-content p {
+    font-size: 1rem;
+  }
+
+  .profile {
+    width: 150px;
+    height: 150px;
+  }
+
+  .skill-container {
+    padding: 10px;
+  }
+
+  .logos img {
+    height: 70px;
+    margin: 0 30px;
+  }
+
+  .card-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card {
+    display: flex;
+    max-width: 100%;
+  }
+
+  .contact-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .contact-container h1 {
+    font-size: 2rem;
+    padding: 5px;
+  }
+
+  .contact-content {
+    font-size: 1rem;
+  }
+
+  .contact-content i {
+    font-size: 2rem;
+  }
+
+  .image-container img {
+    width: 250px;
   }
 }
